# rustarrow

./: README.md
cpp/parquet_arrow/: CMakeLists.txt  README.md  main.cpp
java/: README.md  pom.xml
java/src/main/java/org/viirya/parquet/: Parquet.java  ParquetNative.java  ParquetReader.java  ParquetReaderUtils.java
java/src/main/rust/parquetlib/: Cargo.toml
java/src/main/rust/parquetlib/src/: lib.rs
rust/parquet_read/: Cargo.toml  README.md
rust/parquet_read/data/: simple_data.parquet
rust/parquet_read/src/: main.rs
rust/rustarrow/: Cargo.toml
rust/rustarrow/src/: lib.rs  rustarrow.rs
