[package]
name = "parquetlib"
version = "0.1.0"
authors = ["Liang-Chi Hsieh <viirya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
arrow = { version = "5.4.0", features = ["prettyprint"] }
parquet = { version = "5.4.0", features = ["arrow"] }
log = "^0.4"

[lib]
crate_type = ["cdylib"]
